tests/errors/dynamic-share.fil
import "primitives/core.fil";

comp Max_mult_add<G, L>(
  @interface[G, G+3] go_G: 1,
  @interface[L, L+3] go_L: 1,
  @[G, G+1] a: 32,
  @[G, G+1] b: 32,
  @[L, L+1] c: 32,
  @[L, L+1] d: 32,
) -> () {
  M := new Add[32];
  m1 := M<L>(c, d);
  m0 := M<G>(a, b);
}
