tests/errors/dynamic-share.expect
---CODE---
1
---STDERR---
error: Bindings for M.G uses multiple events: L and G. Sharing using multiple events is not supported.
   ┌─ tests/errors/dynamic-share.fil:12:3
   │
12 │   m1 := M<L>(c, d);
   │   ^^^^^^^^^^^^^^^^^ Location provides binding M.G=L
13 │   m0 := M<G>(a, b);
   │   ----------------- Location provides binding M.G=G

